--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Replace this with a picture of me, then scale it up. Make sure it is centered correctly-->
 				<span class="image"><img src="images/profileCropped.png" style="height: 50%; width: 50%; display: block; margin-left: auto; margin-right: auto;"></span>
 				<h1>Edward Alder</h1>
-				<p>I am a junior at Colorado University of Boulder studying Computer Science.
+				<p>I am a junior at University of Colorado Boulder studying Computer Science.
 				<br />
 				My passions include programming, working with computer hardware, and soccer!
 				<br />
