--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="box alt container">
 					<section class="feature left">
 						<!-- <a href="#" class="image"><img src="images/HomelyResized.png" alt="" /></a> -->
-						<span class="image"><img src="images/HomelyResized.png" alt=""></span>
+						<span class="image"><img class="myImg" src="images/Homely.png" alt=""></span>
 						<div class="content">
 							<h3>Homely</h3>
 							<p>I worked on a roommate organization service called Homely built with ReactJS. The website was designed to make communication about chores, 
@@ -57,7 +57,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<span class="image"><img src="images/FoosballResized.png" alt=""></span>
+						<span class="image"><img class="myImg" src="images/Foosball.png" alt=""></span>
 						<div class="content">
 							<h3>Foosball</h3>
 							<p>I worked on a 3D Foosball game in browser using ThreeJS. Foosball is an easy to play foosball game all running in browser with simple controls, 
@@ -65,8 +65,7 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<span class="image"><img src="images/MazeResized.png" alt=""></span>
-						<!-- Fix the horrible sizing of this image -->
+						<span class="image"><img class="myImg" src="images/mazeRunner.png" alt=""></span>
 						<div class="content">
 							<h3>Maze Runner Game</h3>
 							<p>I developed a random maze playing field generator. You play as a red dot trying to reach the exit of the maze. You have to reach the end under a 
@@ -74,7 +73,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<span class="image"><img src="images/club.png" alt="" style="height: 416px; width: 318px;"></span>
+						<span class="image"><img class="myImg" src="images/club.png" alt=""></span> <!--style go here-->
 						<div class="content">
 							<h3>CLÜB</h3>
 							<p>I developed the base of an phone app designed to streamline connection between college students and school clubs. Through Flutter and Firebase, 
@@ -84,6 +83,8 @@
 							</div>
 						</section>
 				</div>
+
+				<!-- style="height: 416px; width: 318px;" -->
 						
 				<!--
 				<div class="box container">
