--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<span class="image"><img class="myImg" src="images/Homely.png" alt=""></span>
 						<div class="content">
 							<h3>Homely</h3>
-							<p>I worked on a roommate organization service called Homely built with ReactJS. The website was designed to make communication about chores, 
+							<p>I worked on a roommate organization service called Homely built with React and Firebase. The website was designed to make communication about chores, 
 								supplies, and other important events simple and clear. </p>
 						</div>
 					</section>
@@ -60,7 +60,7 @@
 						<span class="image"><img class="myImg" src="images/Foosball.png" alt=""></span>
 						<div class="content">
 							<h3>Foosball</h3>
-							<p>I worked on a 3D Foosball game in browser using ThreeJS. Foosball is an easy to play foosball game all running in browser with simple controls, 
+							<p>I worked on a 3D Foosball game in browser using Three.js. Foosball is an easy to play foosball game all running in browser with simple controls, 
 								music, and multiplayer to be added in the future. I designed and implemented a UI and added realistic shadow effects.</p>
 						</div>
 					</section>
@@ -73,7 +73,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<span class="image"><img class="myImg" src="images/club.png" alt=""></span> <!--style go here-->
+						<span class="image"><img class="myImg" src="images/club.png" alt=""></span> 
 						<div class="content">
 							<h3>CLÜB</h3>
 							<p>I developed the base of an phone app designed to streamline connection between college students and school clubs. Through Flutter and Firebase, 
@@ -84,7 +84,6 @@
 						</section>
 				</div>
 
-				<!-- style="height: 416px; width: 318px;" -->
 						
 				<!--
 				<div class="box container">
