--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="./favicons/favicon-196x196.png" sizes="196x196"/>
+		<link rel="icon" type="image/png" href="./favicons/favicon-128x128.png" sizes="128x128"/>
+		<link rel="icon" type="image/png" href="./favicons/favicon-96x96.png" sizes="96x96"/>
+		<link rel="icon" type="image/png" href="./favicons/favicon-32x32.png" sizes="32x32"/>
+		<link rel="icon" type="image/png" href="./favicons/favicon-16x16.png" sizes="16x16"/>
+		
 	</head>
 	<body class="is-preload">
 
