--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Edward Alder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:image" content="images/thumbnail.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="./favicons/favicon-196x196.png" sizes="196x196"/>
 		<link rel="icon" type="image/png" href="./favicons/favicon-128x128.png" sizes="128x128"/>
@@ -71,7 +72,7 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<span class="image"><img class="myImg" src="images/mazeRunner.png" alt=""></span>
+						<span class="image"><img class="myImg" src="images/Maze2.png" alt=""></span>
 						<div class="content">
 							<h3>Maze Runner Game</h3>
 							<p>I developed a random maze playing field generator. You play as a red dot trying to reach the exit of the maze. You have to reach the end under a 
