Header rework and Coursewok addition changed header to square, and changed header color to resume dark color changed foot color to dark color removed grey background that was behind all the images Added coursework section
TODO:
fix bottom padding or margin for classwork section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,42 @@
 								I created an Android app that let users sign on through email/password, create and edit personal profiles, and create and join 
 								club pages.
 							</p>
-							</div>
+						</div>
+					</section>
+					<div class="box container" style="margin-top: 6em;">
+						<section>
+							<header>
+								<h3>Relevant Classwork</h3>
+							</header>
+							<ul class="default" style="margin-bottom: -5px;">
+								<li>CSCI 3104 Algorithms
+									<ul class="default" style="margin-bottom: 15px;">
+										<li>Learned about the deep and complex world of algorithms. Discovered how to truly think like a computer and other important things like program runtime.</li>
+									</ul>
+								</li>
+								<li>CSCI 2270 Data Structures
+									<ul class="default" style="margin-bottom: 15px;">
+										<li>Learned and implemented classic data structures through C++. Worked on assignments that included linked lists, hash tables, trees, and graphs</li>
+									</ul>
+								</li>
+								<li>CSCI 3287 Database Systems
+									<ul class="default" style="margin-bottom: 15px;">
+										<li>Explored the world of industry used database management techniques. Designed, created, and modified multiple databases throughout the course. Using tools such as SQL, MySQL, and MongoDB</li>
+									</ul>
+								</li>
+								<li>CSCI 2400 Computer Systems
+									<ul class="default" style="margin-bottom: 15px;">
+										<li>Learned the basics of low level computer architecture and programming languages. I studied binary, code optimisation, code security flaws, memory management, and the basics of operating systems with the C programming language.</li>
+									</ul class="default">
+								</li>
+								<li>CSCI 3753 Operating Systems
+									<ul class="default">
+										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, system calls, and... More that I will write about when I finish the class :) </li>
+									</ul>
+								</li>
+							</ul>
 						</section>
+					</div>
 				</div>
 
 						
@@ -233,7 +267,7 @@
 						</form>
 					</section>
 				</div>
-				-->
+				<!-- -->
 				
 				<!-- <footer class="major container medium">
 					<h3>View my resume</h3>
