--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 								</li>
 								<li>CSCI 2270 Data Structures
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Learned and implemented classic data structures through C++. Worked on assignments that included linked lists, hash tables, trees, and graphs</li>
+										<li>Learned and implemented classic data structures through C++. Worked on assignments that included linked lists, hash tables, trees, and graphs.</li>
 									</ul>
 								</li>
 								<li>CSCI 3287 Database Systems
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Explored the world of industry used database management techniques. Designed, created, and modified multiple databases throughout the course. Using tools such as SQL, MySQL, and MongoDB</li>
+										<li>Explored the world of industry used database management techniques. Designed, created, and modified multiple databases throughout the course. Using tools such as SQL, MySQL, and MongoDB.</li>
 									</ul>
 								</li>
 								<li>CSCI 2400 Computer Systems
@@ -117,7 +117,7 @@
 								</li>
 								<li>CSCI 3753 Operating Systems
 									<ul class="default">
-										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, system calls, and... More that I will write about when I finish the class :) </li>
+										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, system calls, and... More that I will write about when I finish the class </li>
 									</ul>
 								</li>
 							</ul>
