Added image links to github

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="box alt container">
 					<section class="feature left">
 						<!-- <a href="#" class="image"><img src="images/HomelyResized.png" alt="" /></a> -->
-						<span class="image"><img class="myImg" src="images/Homely.png" alt=""></span>
+						<a href="https://github.com/Umar-M-Haroon/HomelyWeb" target="_blank"><span class="image"><img class="myImg" src="images/Homely.png" alt=""></span></a>
 						<div class="content">
 							<h3>Homely</h3>
 							<p>I worked on a roommate organization service called Homely built with React and Firebase. The website was designed to make communication about chores, 
@@ -64,7 +64,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<span class="image"><img class="myImg" src="images/Foosball.png" alt=""></span>
+						<a href="https://github.com/malder08/Foosball" target="_blank"><span class="image"> <img class="myImg" src="images/Foosball.png" alt=""></span></a>
 						<div class="content">
 							<h3>Foosball</h3>
 							<p>I worked on a 3D Foosball game in browser using Three.js. Foosball is an easy to play foosball game all running in browser with simple controls, 
@@ -72,7 +72,7 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<span class="image"><img class="myImg" src="images/Maze2.png" alt=""></span>
+						<a href="https://github.com/eddyalder/mazeRunner" target="_blank"> <span class="image"> <img class="myImg" src="images/Maze2.png" alt=""></span></a>
 						<div class="content">
 							<h3>Maze Runner Game</h3>
 							<p>I developed a random maze playing field generator. You play as a red dot trying to reach the exit of the maze. You have to reach the end under a 
@@ -80,7 +80,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<span class="image"><img class="myImg" src="images/club.png" alt=""></span> 
+						<a href="https://github.com/eddyalder/CLUB" target="_blank"><span class="image"><img class="myImg" src="images/club.png" alt=""></span></a>
 						<div class="content">
 							<h3>CLÜB</h3>
 							<p>I developed the base of an phone app designed to streamline connection between college students and school clubs. Through Flutter and Firebase, 
