Updated class descriptions Completed bio of OS Updated all others

--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
 							<ul class="default" style="margin-bottom: -5px;">
 								<li>CSCI 3104 Algorithms
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Learned about the deep and complex world of algorithms. Discovered how to truly think like a computer and other important things like program runtime.</li>
+										<li>Learned about the deep and complex world of algorithms. Covered things such as time and space complexity, recursion, types of algorithms, and dynamic programming.</li>
 									</ul>
 								</li>
 								<li>CSCI 2270 Data Structures
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Learned and implemented classic data structures through C++. Worked on assignments that included linked lists, hash tables, trees, and graphs.</li>
+										<li>Learned and implemented classic data structures through C++. Worked on assignments that involved implementing linked lists, hash tables, trees, and graphs.</li>
 									</ul>
 								</li>
 								<li>CSCI 3287 Database Systems
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Explored the world of industry used database management techniques. Designed, created, and modified multiple databases throughout the course. Using tools such as SQL, MySQL, and MongoDB.</li>
+										<li>Explored the world of industry used databases and database management techniques. Designed, created, and modified multiple databases throughout the course using tools such as SQL, MySQL, and MongoDB.</li>
 									</ul>
 								</li>
 								<li>CSCI 2400 Computer Systems
 									<ul class="default" style="margin-bottom: 15px;">
-										<li>Learned the basics of low level computer architecture and programming languages. I studied binary, code optimisation, code security flaws, memory management, and the basics of operating systems with the C programming language.</li>
+										<li>Learned the basics of low level computer architecture and programming languages. I studied binary, code optimisation, common programming security flaws, memory management, and the basics of operating systems with the C programming language.</li>
 									</ul class="default">
 								</li>
 								<li>CSCI 3753 Operating Systems
 									<ul class="default">
-										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, system calls, and... More that I will write about when I finish the class </li>
+										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, virtual memory, and file systems. Assignments covered how to implement those chapters with C. </li>
 									</ul>
 								</li>
 							</ul>
