Removed passions under picture and desc

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 				<!-- Replace this with a picture of me, then scale it up. Make sure it is centered correctly-->
 				<span class="image"><img src="images/profileCropped.png" style="height: 50%; width: 50%; display: block; margin-left: auto; margin-right: auto;"></span>
 				<h1>Edward Alder</h1>
-				<p>I am a junior at University of Colorado Boulder studying Computer Science.
-				<br />
+				<p>Junior at University of Colorado Boulder studying Computer Science
+				<!-- <br />
 				My passions include programming, working with computer hardware, and soccer!
-				<br />
+				<br /> -->
 				
 				</p>
 
-				<footer style="padding-top: 5%;">
+				<footer style="padding-top: 1%;">
 					<h3>View my resume</h3>
 					<!-- <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p> -->
 					<ul class="actions special">
