Updated resume Changed description of OS class Changed color of resume button on hover to red from the old green

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<h3>View my resume</h3>
 					<!-- <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p> -->
 					<ul class="actions special">
-						<li><a href="./assets/resume-3-31.pdf" target="_blank" class="button">Click here</a></li> 
+						<li><a href="./assets/resume-5-24.pdf" target="_blank" class="button">Click here</a></li> 
 					</ul>
 					<!-- <p></p> -->
 				</footer>
@@ -117,7 +117,7 @@
 								</li>
 								<li>CSCI 3753 Operating Systems
 									<ul class="default">
-										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, virtual memory, and file systems. Assignments covered how to implement those chapters with C. </li>
+										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, virtual memory, and file systems. Assignments covered how to implement those concepts in C. </li>
 									</ul>
 								</li>
 							</ul>
