--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
 										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, virtual memory, and file systems. Assignments covered how to implement those concepts in C. </li>
 									</ul>
 								</li>
+								<li>CSCI 3753 Operating Systems
+									<ul class="default">
+										<li>Expanded upon Computer Systems and learned how operating systems are built. Individual chapters included concurrent programming, virtual memory, and file systems. Assignments covered how to implement those concepts in C. </li>
+									</ul>
+								</li>
 							</ul>
 						</section>
 					</div>
