--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<h3>View my resume</h3>
 					<!-- <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p> -->
 					<ul class="actions special">
-						<li><a href="./assets/resume-5-24.pdf" target="_blank" class="button">Click here</a></li> 
+						<li><a href="./assets/Resume-9-2-21.pdf" target="_blank" class="button">Click here</a></li> 
 					</ul>
 					<!-- <p></p> -->
 				</footer>
